--- a/package.json
+++ b/package.json
@@ -1,9 +1,28 @@
 {
-	"name": "portafolio",
-	"version": "1.0.0",
-	"license": "MIT",
-	"private": true,
-	"workspaces": [
-		"packages/*"
-	]
+  "name": "web",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev -p 3030",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^5.0.0-alpha.27",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
+    "next": "10.0.4",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@types/yup": "^0.29.11",
+    "typescript": "^4.1.3"
+  }
 }
